--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -130,7 +130,7 @@
 	name=nfwe_rand_wound
 	id=nfwe_rand_wound_id
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..140)}
+	{VARIABLE_OP rand_wound rand(1..143)}
 	[switch]
 		variable=rand_wound
 		[case]
@@ -175,7 +175,7 @@
 					[if]
 						[have_location]
 							{EVENT_UNIT}
-							terrain=W*^*,S*^*
+							terrain=W*,S*
 						[/have_location]
 						[then]
 							{NFWME_fear_of_water_WOUND}
@@ -184,7 +184,7 @@
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
-								terrain=A*^*,D*^*
+								terrain=A*,D*
 							[/have_location]
 							[then]
 								{NFWME_fear_of_desert_WOUND}
@@ -193,7 +193,7 @@
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
-								terrain=U*^*
+								terrain=U*
 							[/have_location]
 							[then]
 								{NFWME_fear_of_cave_WOUND}
@@ -202,7 +202,7 @@
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
-								terrain=F*^*,T*^*
+								terrain=F*,T*
 							[/have_location]
 							[then]
 								{NFWME_fear_of_plant_WOUND}
@@ -211,7 +211,7 @@
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
-								terrain=M*^*,H*^*
+								terrain=M*,H*
 							[/have_location]
 							[then]
 								{NFWME_fear_of_hight_WOUND}
@@ -220,7 +220,7 @@
 						[elseif]
 							[have_location]
 								{EVENT_UNIT}
-								terrain=G*^*,R*^*
+								terrain=G*,R*
 							[/have_location]
 							[and]
 								[not]
@@ -951,7 +951,34 @@
 					[/fire_event]
 				[/else]
 			[/if]
-		[/case]		
+		[/case]	
+		[case]
+			value=141,142,143
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						[filter_side]
+							formula="fog = true"
+						[/filter_side]
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_fear_of_fog_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwe_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]			
+		[/case]
 	[/switch]
     {CLEAR_VARIABLE rand_wound}
 [/event]
