--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -1,4 +1,5 @@
 #textdomain wesnoth-Non_Fatal_Wounds
+
 #AMLA healing
 [event]
 	name=post_advance
@@ -100,6 +101,88 @@
 		ability=wild_magic_display_healing
 		object_id=wild_magic
 	[/remove_object]
+	
+	[modify_unit]
+		{FILTER_EVENT_UNIT}
+		[effect]
+			apply_to=remove_ability
+			[abilities]
+				[display]
+					id=broken_arm_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=broken_wing_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=broken_leg_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=broken_rib_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=burned_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=concussion_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=frostbite_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=gash_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=infection_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=insane_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=maimed_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=necrosis_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=amnesia_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=sick_display_healing
+				[/display]
+			[/abilities]
+			[abilities]
+				[display]
+					id=wild_magic_display_healing
+				[/display]
+			[/abilities]
+		[/effect]
+	[/modify_unit]
 [/event]
 
 #fear of water
@@ -129,6 +212,7 @@
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
+
 #fear of hight
 [event]
 	name=last_breath
@@ -156,6 +240,7 @@
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
+
 #fear of desert
 [event]
 	name=last_breath
@@ -183,6 +268,7 @@
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
+
 #fear of cave
 [event]
 	name=last_breath
@@ -210,6 +296,7 @@
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
+
 #fear of plant
 [event]
 	name=last_breath
@@ -362,7 +449,7 @@
 				{EVENT_SECOND_UNIT}
 				object_id=fear_of_light
 			[/remove_object]
-			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the light" {NFWME_COLOR_GREEN}}
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of light" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -391,7 +478,35 @@
 				{EVENT_SECOND_UNIT}
 				object_id=fear_of_dark
 			[/remove_object]
-			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of the dark" {NFWME_COLOR_GREEN}}
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of dark" {NFWME_COLOR_GREEN}}
+		[/case]
+	[/switch]
+    {CLEAR_VARIABLE rand_heal_fear}
+[/event]
+
+#fear of fog
+[event]
+	name=last_breath
+	id=nfwme_fear_of_fog_healing
+	first_time_only=no
+	{VARIABLE_OP rand_heal_fear rand(1..20)}
+	
+	[filter_second]
+		ability=fear_of_fog_display
+		[filter_side]
+			formula="fog = true"
+		[/filter_side]
+	[/filter_second]
+	
+	[switch]
+		variable=rand_heal_fear
+		[case]
+			value=1
+			[remove_object]
+				{EVENT_SECOND_UNIT}
+				object_id=fear_of_fog
+			[/remove_object]
+			{NFWME_FLOAT_TEXT_SECOND_UNIT _"Recovered from fear of fog" {NFWME_COLOR_GREEN}}
 		[/case]
 	[/switch]
     {CLEAR_VARIABLE rand_heal_fear}
