--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -36,7 +36,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_broken_arm_Healing
-						description=_ "Recover from broken arm."
+						description=_ "Recover from broken arm"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -75,7 +75,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_broken_wing_Healing
-						description=_ "Recover from broken wing."
+						description=_ "Recover from broken wing"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -114,7 +114,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_broken_leg_Healing
-						description=_ "Recover from broken leg."
+						description=_ "Recover from broken leg"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -156,7 +156,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_broken_rib_Healing
-						description= _"Recover from broken rib."
+						description= _"Recover from broken rib"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -199,7 +199,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_burned_Healing
-						description= _"Recover from burn."
+						description= _"Recover from burn"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -272,7 +272,7 @@
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_concussion_Healing
-						description= _"Recover from concussion."
+						description= _"Recover from concussion"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -616,6 +616,36 @@ Face your fears to try and overcome them."
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Scared of the light" {NFWME_COLOR_RED}}
 #enddef
 
+#define NFWME_fear_of_fog_WOUND
+	[modify_unit]
+		{FILTER_EVENT_UNIT}
+		[object]
+			id=fear_of_fog
+			[effect]
+				apply_to=new_ability
+				[abilities]
+					[display]
+						id=fear_of_fog_display
+						name="<span color='#DA0000'>"+_"nebulaphobia"+"</span>"
+						description=_"Scared of fog. Movement points -40% when fog is enabled.
+Face your fears to try to overcome them."
+					[/display]
+				[/abilities]
+			[/effect]
+			[effect]
+				[filter]
+					[filter_side]
+						formula="fog = true"
+					[/filter_side]
+				[/filter]
+				apply_to=movement
+				increase=-40%
+			[/effect]
+		[/object]
+	[/modify_unit]
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Nebulaphobia" {NFWME_COLOR_RED}}
+#enddef
+
 #define NFWME_frostbite_WOUND
     [modify_unit]
 		{FILTER_EVENT_UNIT}
@@ -627,7 +657,7 @@ Face your fears to try and overcome them."
 					[display]
 						id=frostbite_display
 						name="<span color='#DA0000'>"+_"frostbite"+"</span>"
-						description=_"Cold resistance -30%."
+						description=_"Cold resistance -30%"
 					[/display]
 				[/abilities]
 			[/effect]
@@ -642,7 +672,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_frostbite_Healing
-						description= _"Recover from frostbite."
+						description= _"Recover from frostbite"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -669,7 +699,7 @@ Face your fears to try and overcome them."
 					[display]
 						id=gash_display
 						name="<span color='#DA0000'>"+_"gash"+"</span>"
-						description=_"Blade resistance -30%."
+						description=_"Blade resistance -30%"
 					[/display]
 				[/abilities]
 			[/effect]
@@ -684,7 +714,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_gash_Healing
-						description= _"Recover from gash."
+						description= _"Recover from gash"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -720,7 +750,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_infectiont_Healing
-						description= _"Recover from infection."
+						description= _"Recover from infection"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -771,7 +801,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_insane_Healing
-						description= _"Recover from insanity."
+						description= _"Recover from insanity"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -807,7 +837,7 @@ Face your fears to try and overcome them."
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_maimed_Healing
-						description= _"Recover from mutilation."
+						description= _"Recover from mutilation"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -855,7 +885,7 @@ Arcane resistance -30%"
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_neccrosis_Healing
-						description= _"Recover from necrosis."
+						description= _"Recover from necrosis"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -942,7 +972,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_amnesia_Healing
-						description= _"Recover from amnesia."
+						description= _"Recover from amnesia"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -978,7 +1008,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_sick_Healing
-						description= _"Recover from sickness."
+						description= _"Recover from sickness"
 						[effect]
 							apply_to=new_ability
 							[abilities]
@@ -1240,7 +1270,9 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				apply_to=attack
 				range=ranged
 				special_id=marksman
+				remove_specials=marksman
 				[set_specials]
+					mode=append
 					[chance_to_hit]
 						id=marksman
 						name= _ "poor marksmanship"
@@ -1362,6 +1394,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 			[effect]
 				apply_to=attack
 				special_id=magical
+				remove_specials=magical
 				[set_specials]
 					mode=append
 					[chance_to_hit]
@@ -1377,7 +1410,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 				apply_to=new_advancement
 					[advancement]
 						id=NFWME_wild_magic_Healing
-						description= _"Recover from wild magic."
+						description= _"Recover from wild magic"
 						[effect]
 							apply_to=new_ability
 							[abilities]
