--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -36,6 +36,7 @@
 * <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, wounded with any weapon
 * <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
 * <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
+* <i>Fear of fog</i> (-40% mp when fog is active) > Not mechanical, wounded with fog active
 * <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
 * <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack
 * <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random
@@ -174,9 +175,9 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"        "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
-* Death (definitive death)
-* Turning into a ghost: -40% HP, spirit type movement, defenses and resistances, chaotic alignment, ranged attack changed to cold if not magical, arcane or fire, melee attack changed to arcane and with drain if not magical, cold or fire > Units that are not already spirits or ghosts
-* Turning into a zombie: -20% HP, slower, low arcane resistance,  chaotic alignment, plague on melee, -50% magical attacks damage, -25& ranged attacks damage, and poor markmanship on marksmans > Units that are not already undead"
+* <i>Death</i> (definitive death)
+* <i>Turning into a ghost</i>: -40% HP, spirit type movement, defenses and resistances, chaotic alignment, ranged attack changed to cold if not magical, arcane or fire, melee attack changed to arcane and with drain if not magical, cold or fire > Units that are not already spirits or ghosts
+* <i>Turning into a zombie</i>: -20% HP, slower, low arcane resistance,  chaotic alignment, plague on melee, -50% magical attacks damage, -25& ranged attacks damage, and poor markmanship on marksmans > Units that are not already undead"
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
