--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1151,7 +1151,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					type=cold,fire
 				[/not]
 				set_type=arcane
-				set_description=_"spectral "+$unit.attack[0].description
+				set_description=_"spectral $unit.attack[0].description"
 				set_icon=$unit.attack[0].icon
 				[set_specials]
 					mode=append
@@ -1175,7 +1175,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 					type=arcane,fire
 				[/not]
 				set_type=cold
-				set_description=_"spectral "+$unit.attack[$($unit.attack.length - 1)].description
+				set_description=_"spectral $unit.attack[$($unit.attack.length - 1)].description"
 				set_icon=$unit.attack[$($unit.attack.length - 1)].icon
 			[/effect]
 		[/trait]
