Consistency on help descriptions

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -28,11 +28,11 @@
 * <i>Broken wing</i> (-20% mp) > Races with wings, random
 * <i>Broken leg</i> (-20% mp) > Races with legs, random
 * <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack
-* <i>Burned</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
-* <i>Captured</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable
+* <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
+* <i>Capture</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable
 * <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
 * <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
-* <i>Coward</i> (-15% accuracy) > Not mechanical, random
+* <i>Cowardice</i> (-15% accuracy) > Not mechanical, random
 * <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, wounded with any weapon
 * <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground
 * <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains
@@ -40,11 +40,11 @@
 * <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
 * <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack
 * <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random
-* <i>Sick</i> (20% chance of being slowed every turn) > All units, random
+* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random
 * <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability
-* <i>Maimed</i> (-20% hp) > All units, random
+* <i>Mutilation</i> (-20% hp) > All units, random
 * <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random
-* <i>Plagued</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+* <i>Lost</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
 					side_for=$side_number
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
@@ -75,9 +75,10 @@
 * <i>Fear of terrain</i>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.
 * <i>Fear of weapon</i>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.
 * <i>Fear of light/dark</i>: 5% chance of recovery when defeating an opponent during the day/night.
-* <i>Coward</i>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
+* <i>Fear of fog</i>: 5% chance of recovery when defeating an opponent when fog is active.
+* <i>Cowardice</i>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.
 * <i>Short-term memory loss</i>: is an 1-use wound and is healed inmediately.
-* <i>Captured</i>: is an 1-use wound and is healed when the unit is recalled the first time.
+* <i>Capture</i>: is an 1-use wound and is healed when the unit is recalled the first time.
 * The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).
 * Optional wounds can't be healed at all."
 					side_for=$side_number
