--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -76,6 +76,21 @@
 	[or]
 		[have_location]		
 			{EVENT_UNIT}
+			[filter_wml]
+				[modifications]
+					[trait]
+						[effect]
+							apply_to=overlay
+							add="misc/hero-icon.png"
+						[/effect]
+					[/trait]
+				[/modifications]
+			[/filter_wml]
+		[/have_location]
+	[/or]
+	[or]
+		[have_location]		
+			{EVENT_UNIT}
 			[filter]
 				id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Ailiandil,,Aisalting,Azyan,Brom,Coral,Durmenthrain,Echelana,Echlebert,Grim,Guldarmaadh,Ibn Ghani,Ibn Khazul,Ilaroth,Ilrandh,Ilriel,Iskandar,Khazran,Moraen,Norn,Nuvdael,Onarr,Rhamuniel,Ridwan,Schabral,Skjol_Forefather,Skjol,Uthain,Wahdet,Yrialdhe,Midnight Queen,Noiraran,Kuhnar
 			[/filter]
