--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -723,7 +723,7 @@
 					[/filter]
 				[/have_location]
 				[or]
-					{VARIABLE_CONDITIONAL aww_def_ratio greater_than 0}
+					{VARIABLE_CONDITIONAL ambusher_w_damage greater_than 0}
 				[/or]
 				[then]
 					[fire_event]
