--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -39,8 +39,8 @@
 * <i>Fear of fog</i> (-40% mp when fog is active) > Not mechanical, wounded with fog active
 * <i>Frostbite</i> (-30% cold resistance) > All units, wounded with ice attack or on a cold terrain
 * <i>Gash</i> (-30% blade resistance) > All units, wounded with blade attack
-* <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random
-* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random
+* <i>Infection</i> (10% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
+* <i>Sickness</i> (20% chance of being slowed every turn) > All units, random but more probable if slowed
 * <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability
 * <i>Mutilation</i> (-20% hp) > All units, random
 * <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random
