--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -27,9 +27,9 @@
 * <i>Broken arm</i> (-20% non-magical damage) > Races with arms, random
 * <i>Broken wing</i> (-20% mp) > Races with wings, random
 * <i>Broken leg</i> (-20% mp) > Races with legs, random
-* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, wounded with impact attack
+* <i>Broken rib</i> (-30% impact resistance) > Not mechanical or spirits, random but more probable with impact attack
 * <i>Burn</i> (-30% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire
-* <i>Capture</i> (increased recall cost based on level) > All units, random but on leaders and heroes is much more probable
+* <i>Capture</i> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
 * <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random
 * <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magical attacks, random
 * <i>Cowardice</i> (-15% accuracy) > Not mechanical, random
