New wound: Damaged

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -130,7 +130,7 @@
 	name=nfwe_rand_wound
 	id=nfwe_rand_wound_id
 	first_time_only=no
-	{VARIABLE_OP rand_wound rand(1..143)}
+	{VARIABLE_OP rand_wound rand(1..150)}
 	[switch]
 		variable=rand_wound
 		[case]
@@ -965,6 +965,31 @@
 				[/have_location]
 				[then]
 					{NFWME_fear_of_fog_WOUND}
+				[/then]
+				[else]
+					[fire_event]
+						name=nfwe_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/else]
+			[/if]			
+		[/case]
+		[case]
+			value=144,145,146,147,148,149,150
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[then]
+					{NFWME_damaged_WOUND}
 				[/then]
 				[else]
 					[fire_event]
