--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -76,7 +76,19 @@
 		{EVENT_UNIT}
 		ability=maimed_display_healing
 		object_id=maimed_logic_object
-	[/remove_object]	
+	[/remove_object]
+	
+	[remove_object]
+		{EVENT_UNIT}
+		ability=damaged_display_healing
+		object_id=damaged
+	[/remove_object]
+	
+	[remove_object]
+		{EVENT_UNIT}
+		ability=damaged_display_healing
+		object_id=damaged_logic_object
+	[/remove_object]
 	
 	[remove_object]
 		{EVENT_UNIT}
