--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -35,6 +35,33 @@
 			[/effect]
 		[/object]
 	[/modify_unit]
+	#damage health debuff	
+	[modify_unit]
+		[filter]
+			ability=damaged_display
+			[not]
+				ability=damaged_logic
+			[/not]
+		[/filter]
+		 
+		[object]
+			id=damaged_logic_object
+			take_only_once=no
+			[effect]
+				apply_to=new_ability
+				[abilities]
+					[display]
+						id=damaged_logic
+					[/display]
+				[/abilities]
+			[/effect]
+			
+			[effect]
+				apply_to=hitpoints
+				increase_total=-5%
+			[/effect]
+		[/object]
+	[/modify_unit]
 	#ghost health debuff
 	[modify_unit]
 		[filter]
