--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1425,3 +1425,51 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
 	[/modify_unit]
 	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Wild Magic" {NFWME_COLOR_RED}}
 #enddef
+
+#define NFWME_damaged_WOUND
+     [modify_unit]
+		{FILTER_EVENT_UNIT}
+		[object]
+			id=damaged
+			[effect]
+				apply_to=new_ability
+				[abilities]
+					[display]
+						id=damaged_display
+						name="<span color='#DA0000'>"+_"damaged"+"</span>"
+						female_name="<span color='#DA0000'>"+_"female^damaged"+"</span>"
+						description=_"Attack damage, movement, accuracy and HP -5%"
+					[/display]
+				[/abilities]
+			[/effect]
+			[effect]
+				apply_to=attack
+				increase_damage=-5%
+			[/effect]
+			[effect]
+				apply_to=movement
+				increase=-5%
+			[/effect]
+			[effect]
+				apply_to=attack
+				increase_accuracy=-5
+			[/effect]
+			[effect]
+				apply_to=new_advancement
+					[advancement]
+						id=NFWME_damaged_Healing
+						description= _"Repair"
+						[effect]
+							apply_to=new_ability
+							[abilities]
+								[display]
+									id=damaged_display_healing
+								[/display]
+							[/abilities]
+						[/effect]
+					[/advancement]
+			[/effect]
+		[/object]
+	[/modify_unit]
+	{NFWME_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Damage" {NFWME_COLOR_RED}}
+#enddef
