--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -44,6 +44,7 @@
 * <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability
 * <i>Mutilation</i> (-20% hp) > All units, random
 * <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random
+* <i>Damage</i> (-5% mp, hp, damage and accuracy) > Mechanical, random
 * <i>Lost</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
 					side_for=$side_number
 					image="units/human-loyalists/duelist-die5.png"
