Fixed fog, capture, and character error on 1.16

--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -76,16 +76,18 @@
 	[or]
 		[have_location]		
 			{EVENT_UNIT}
-			[filter_wml]
-				[modifications]
-					[trait]
-						[effect]
-							apply_to=overlay
-							add="misc/hero-icon.png"
-						[/effect]
-					[/trait]
-				[/modifications]
-			[/filter_wml]
+			[filter]
+				[filter_wml]
+					[modifications]
+						[trait]
+							[effect]
+								apply_to=overlay
+								add="misc/hero-icon.png"
+							[/effect]
+						[/trait]
+					[/modifications]
+				[/filter_wml]
+			[/filter]
 		[/have_location]
 	[/or]
 	[or]
