--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -506,7 +506,7 @@
 	[filter_second]
 		ability=fear_of_fog_display
 		[filter_side]
-			formula="fog = true"
+			formula="fog"
 		[/filter_side]
 	[/filter_second]
 	
