--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -635,7 +635,7 @@ Face your fears to try to overcome them."
 			[effect]
 				[filter]
 					[filter_side]
-						formula="fog = true"
+						formula="fog"
 					[/filter_side]
 				[/filter]
 				apply_to=movement
