--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -13,7 +13,7 @@
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
-			label="‣ "+_"List of Wounds"
+			label="<b>»</b> "+_"List of Wounds"
 			default=yes
             [command]
                 [message]
@@ -49,7 +49,7 @@
 					side_for=$side_number
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
@@ -66,7 +66,7 @@
             [/command]
 		[/option]
         [option]
-			label="‣ "+_"List of healing methods"
+			label="<b>»</b> "+_"List of healing methods"
 			default=yes
             [command]
                 [message]
@@ -85,7 +85,7 @@
 					side_for=$side_number
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
@@ -102,14 +102,14 @@
             [/command]
 		[/option]
         [option]
-			label="‣ "+_"Change status of Wounds"
+			label="<b>»</b> "+_"Change status of Wounds"
             [command]
 				[message]
                     speaker=narrator
 					message=_"Set status of Wounds."
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
-						label="‣ "+"<i>"+_"Activate"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_wounds
@@ -118,7 +118,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+"<i>"+_"Deactivate"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_wounds
@@ -127,7 +127,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+"<i>"+_"Deactivate, but can lost plagued unit"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Deactivate, but can lost plagued unit"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_wounds
@@ -136,7 +136,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
@@ -153,7 +153,7 @@
             [/command]
 		[/option]		
         [option]
-			label="‣ "+_"Back to help menu"
+			label="<b>»</b> "+_"Back to help menu"
 			default=yes
             [command]
                 [fire_event]
@@ -183,14 +183,14 @@
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
-			label="‣ "+_"Change status of Death"
+			label="<b>»</b> "+_"Change status of Death"
             [command]
 				[message]
                     speaker=narrator
 					message=_"Set status of Death."
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
-						label="‣ "+"<i>"+_"Deactivate"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_deadundead
@@ -199,7 +199,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+"<i>"+_"Activate Death"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Activate Death"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_deadundead
@@ -208,7 +208,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+"<i>"+_"Activate Death, Undeath and Ghosts"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Activate Death, Undeath and Ghosts"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_deadundead
@@ -217,7 +217,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
@@ -234,7 +234,7 @@
             [/command]
 		[/option]		
         [option]
-			label="‣ "+_"Back to help menu"
+			label="<b>»</b> "+_"Back to help menu"
 			default=yes
             [command]
                 [fire_event]
@@ -263,14 +263,14 @@
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
-			label="‣ "+_"Change status of Funny wounds"
+			label="<b>»</b> "+_"Change status of Funny wounds"
             [command]
 				[message]
                     speaker=narrator
 					message=_"Set status of Funny wounds."
 					image="units/human-loyalists/duelist-die5.png"
 					[option]
-						label="‣ "+"<i>"+_"Activate"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_funny
@@ -279,7 +279,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+"<i>"+_"Deactivate"+"</i>"
+						label="<b>»</b> "+"<i>"+_"Deactivate"+"</i>"
 						[command]
 							[set_variable]
 								name=nfwe_funny
@@ -288,7 +288,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
@@ -305,7 +305,7 @@
             [/command]
 		[/option]		
         [option]
-			label="‣ "+_"Back to help menu"
+			label="<b>»</b> "+_"Back to help menu"
 			default=yes
             [command]
                 [fire_event]
@@ -348,25 +348,25 @@
         side_for=$side_number
 		image="units/human-loyalists/duelist-die5.png"
         [option]
-            label="‣ "+_"Wounds"
+            label="<b>»</b> "+_"Wounds"
             [command]
                 {NFW_WOUNDS $nfwe_wounds}
             [/command]
         [/option]
         [option]
-            label="‣ "+_"Death"
+            label="<b>»</b> "+_"Death"
             [command]
                 {NFW_DEATH $nfwe_deadundead}
             [/command]
         [/option]
         [option]
-            label="‣ "+_"Funny wounds"
+            label="<b>»</b> "+_"Funny wounds"
             [command]
                 {NFW_FUNNY $nfwe_funny}
             [/command]
         [/option]
         [option]
-            label="<b>‣ "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
+            label="<b><b>»</b> "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
             [command]
 			   [message]
 					speaker=narrator
@@ -374,7 +374,7 @@
 					side_for=$side_number
 					image="units/human-loyalists/duelist-die5.png"
 			        [option]
-						label="‣ "+_"Yes"
+						label="<b>»</b> "+_"Yes"
 						[command]
 							[message]
 								speaker=narrator
@@ -387,7 +387,7 @@
 						[/command]
 					[/option]
 					[option]
-						label="‣ "+_"Back to help menu"
+						label="<b>»</b> "+_"Back to help menu"
 						default=yes
 						[command]
 							[fire_event]
