--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -351,6 +351,16 @@
 						[/has_attack]
 					[/filter]
 				[/have_location]
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								ability=wild_magic_display
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
 				[then]
 					{NFWME_wild_magic_WOUND}
 				[/then]
@@ -578,7 +588,7 @@
 					{EVENT_UNIT}
 					[filter]
 						[has_attack]
-							special_id=berserk
+							special_type=berserk
 						[/has_attack]
 					[/filter]
 				[/have_location]				
@@ -618,7 +628,15 @@
 					[filter]
 						status=unpoisonable
 					[/filter]
-				[/have_location]					
+				[/have_location]
+				[or]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							ability=infection_display
+						[/filter]
+					[/have_location]
+				[/or]
 				[then]
 					[fire_event]
 						name=nfwe_rand_wound
@@ -644,6 +662,16 @@
 							status=poisoned
 					[/filter]
 				[/have_location]
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								ability=infection_display
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
 				[then]
 					{NFWME_infection_WOUND}
 				[/then]
@@ -662,7 +690,28 @@
 		[/case]
 		[case]
 			value=20
-			{NFWME_amnesia_WOUND}
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						ability=amnesia_dummy
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwe_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_amnesia_WOUND}
+				[/else]
+			[/if]	
 		[/case]
 		[case]
 			value=21
@@ -747,7 +796,28 @@
 		[/case]	
 		[case]
 			value=25
-			{NFWME_sick_WOUND}
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						ability=sick_display
+					[/filter]
+				[/have_location]
+				[then]
+					[fire_event]
+						name=nfwe_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]		
+					[/fire_event]
+				[/then]
+				[else]
+					{NFWME_sick_WOUND}
+				[/else]
+			[/if]	
 		[/case]
 		[case]
 			value=124,125,126,127,128
@@ -758,6 +828,16 @@
 							status=slowed
 					[/filter]
 				[/have_location]
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								ability=sick_display
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
 				[then]
 					{NFWME_sick_WOUND}
 				[/then]
@@ -830,6 +910,16 @@
 				{NFWME_undead_ENABLED}
 				[and]
 					{VARIABLE_CONDITIONAL nfwe_wound_type.movement_type not_equals undeadspirit}
+				[/and]
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								trait=ghost_trait
+							[/filter]
+						[/have_location]
+					[/not]
 				[/and]
 				[then]
 					{NFWME_undead_ghost_WOUND}
