--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -18,9 +18,7 @@
             [command]
                 [message]
 					speaker=narrator
-					message=_"<b>Wounds list:</b>
-
-* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>
+					message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>
 
 * <i>Amnesia</i> (loses 2 xp/turn) > All units, random
 * <i>Short-term memory loss</i> (resets experience) > Units with more than 1/2 of the max experience, random
