Wounds help text smaller

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -18,6 +18,7 @@
             [command]
                 [message]
 					speaker=narrator
+					font_size=smaller
 					message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>
 
 * <i>Amnesia</i> (loses 2 xp/turn) > All units, random
