Added custom lava terrain from Flight_Freedom

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -384,7 +384,7 @@
 				[or]
 					[have_location]
 						{EVENT_UNIT}
-						terrain=*^Ecf,*^Eb,Ql*,Mv*
+						terrain=*^Ecf,*^Eb,Ql*,Mv*,Yl*
 					[/have_location]
 				[/or]
 				[then]
