LoW S19 better filter

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -201,19 +201,15 @@
         [case]
             value=19_Costly_Revenge
 
-            [event]
-                name=moveto
-                first_time_only=yes
-                [filter]
-                    side=1
-                    [filter_location]
-                        terrain=*^V*
-                    [/filter_location]
-                    [have_location]
-                        terrain=*^V*
-                        count=2
-                    [/have_location]
-                [/filter]
+		   [event]
+				name=capture
+				first_time_only=yes
+				[filter]
+					side=1
+					[not]
+						id=Landar
+					[/not]
+				[/filter]
 
                 [message]
                     speaker=narrator
